--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,8 @@
 {
     "name": "sarah",
     "version": "0.1",
+    // "manifest_version": 2,
+    "options_page": "options.html",
     "background_page": "background.html",
     "description": "chrome fiddler",
     "permissions": [
